--- a/css/style.css
+++ b/css/style.css
@@ -335,6 +335,9 @@
 					width: auto;
 				}
 
+
+img.blur { width:367; height:459px; -webkit-filter: blur(3px); -moz-filter: blur(3px); -o-filter: blur(3px); -ms-filter: blur(3px); filter: blur(3px); }
+
 	/* Button */
 	
 		input[type="button"],
